# mithril

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INTERFACES.md  METRICS.md  Makefile  README.md  RESEARCH.md  SCOPE.md  SECURITY.md  SPEC.md  STYLE_GUIDE.md  TESTING.md  docker-compose.yml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
cache/: SPEC.md
checkpoint/: SPEC.md
crates/mithril-cache/: Cargo.toml  STATUS.md
crates/mithril-cache/benches/: cache_bench.rs
crates/mithril-cache/src/: cas.rs  compat.rs  environment.rs  eviction.rs  hooks.rs  keys.rs  lib.rs  metrics.rs  remote.rs  sglang.rs  vllm.rs
crates/mithril-cache/tests/: integration_test.rs
crates/mithril-checkpoint/: Cargo.toml  STATUS.md
crates/mithril-checkpoint/benches/: checkpoint_bench.rs
crates/mithril-checkpoint/src/: bytegroup.rs  compressed_safetensors.rs  delta.rs  formats.rs  gguf.rs  lib.rs  main.rs  onnx.rs  orbax.rs  pipeline.rs  quantize.rs
crates/mithril-checkpoint/tests/: cli_tests.rs  integration_test.rs  real_checkpoints.rs
crates/mithril-core/: Cargo.toml  STATUS.md
crates/mithril-core/src/: compression.rs  error.rs  hashing.rs  lib.rs  types.rs
crates/mithril-core/src/storage/: gcs.rs  local.rs  mod.rs  s3.rs
crates/mithril-dedup/: Cargo.toml  STATUS.md
crates/mithril-dedup/benches/: dedup_bench.rs
crates/mithril-dedup/src/: cluster.rs  hybrid.rs  io.rs  lib.rs  lsh.rs  lsh_bloom.rs  main.rs  minhash.rs  streaming.rs
crates/mithril-dedup/src/distributed/: coordinator.rs  messages.rs  mod.rs  worker.rs
crates/mithril-dedup/src/semantic/: backend.rs  candle.rs  hnsw.rs  index.rs  mod.rs
crates/mithril-dedup/tests/: cli_tests.rs  integration_test.rs  real_datasets.rs
crates/mithril-python/: Cargo.toml  pyproject.toml
crates/mithril-python/python/mithril/: __init__.py  __init__.pyi  async_api.py  cli.py  dcp.py  deepspeed.py  inductor.py  py.typed  streaming.py
crates/mithril-python/src/: cache.rs  checkpoint.rs  dedup.rs  lib.rs
crates/mithril-python/tests/: test_cache_e2e.py
examples/: dedup_dataset.py  pytorch_checkpoint.py  torch_compile_cache.py
python/mithril_ext/: __init__.py
python/mithril_ext/checkpoint/: __init__.py  torch.py
scripts/: compare_throughput.py  download_hf_fixtures.py  generate_fixtures.py  stress_test.py  test_cache_hooks.py  test_dedup.py  test_hf_dedup.py  test_hf_models.py  test_real_training.py
tests/integration/: conftest.py  test_dcp_roundtrip.py  test_delta_compression.py  test_huggingface_models.py  test_pytorch_roundtrip.py  test_s3_storage.py  test_torch_compile.py
