[workspace]
members = [
    "crates/mithril-core",
    "crates/mithril-checkpoint",
    "crates/mithril-dedup",
    "crates/mithril-cache",
    "crates/mithril-python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/mithril"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Parallelism
rayon = "1"

# Bytes & buffers
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Compression
zstd = "0.13"
lz4_flex = "0.11"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
blake3 = "1"
hex = "0.4"

# Encoding
base64 = "0.22"
rmp-serde = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
indicatif = "0.17"
console = "0.15"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Arrow/Parquet (for dedup)
arrow = "53"
parquet = "53"

# Filesystem utilities
dirs = "5"
walkdir = "2"

# Bloom filters
bloomfilter = { version = "1", features = ["serde"] }

# HNSW for semantic search
instant-distance = "0.6"

# Candle ML framework (for native Rust embeddings)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3"
tokenizers = "0.20"

# Cloud storage (optional)
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
cloud-storage = "0.11"
futures = "0.3"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"
rand = "0.8"
assert_cmd = "2"
predicates = "3"

# Internal crates
mithril-core = { path = "crates/mithril-core" }
mithril-checkpoint = { path = "crates/mithril-checkpoint" }
mithril-dedup = { path = "crates/mithril-dedup" }
mithril-cache = { path = "crates/mithril-cache" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
