[package]
name = "mithril-dedup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Data deduplication for ML training datasets"

[[bin]]
name = "mithril-dedup"
path = "src/main.rs"

[features]
default = []
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:hf-hub", "dep:tokenizers"]

[dependencies]
mithril-core = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
xxhash-rust = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
bloomfilter = { workspace = true }
bincode = "1"
zstd = { workspace = true }
instant-distance = { workspace = true }

# Optional: Candle for native Rust embeddings
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }

[[bench]]
name = "dedup_bench"
harness = false
